# DiWeiWei_Nano_Market

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  IMPLEMENTATION_STATUS.md  LEARNINGS.md  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  expect.py  extract_pdf.py  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: mcp-pr-review.agent.md  nano-orchestrator.agent.md
.github/prompts/: 00_nano_orchestrate.prompt.md  00_nano_sprint_planning.prompt.md  01_nano_implement.prompt.md  02_nano_commit.prompt.md  03_nano_review.prompt.md  04_nano_merge.prompt.md  10_nano_sprint_planning.prompt.md  nano_commit.prompt.md  nano_implement.prompt.md  nano_merge.prompt.md  nano_review.prompt.md
.github/workflows/: ci.yml  docker-build.yml  tests-backend.yml  tests-frontend.yml  tests.yml
app/: __init__.py  config.py  database.py  main.py  monitoring.py  redis_client.py
app/models/: __init__.py
app/schemas/: __init__.py
app/security/: __init__.py  middleware.py  rate_limit.py
doc/: AUDIT_LOGGING.md  CHAT_TRANSPORT_SECURITY_BASELINE.md  CI_CD.md  DATABASE_MIGRATIONS.md  DEVELOPER_SETUP.md  FEEDBACK_OBSERVABILITY_RUNBOOK.md  FRONTEND_S2_SETUP.md  MAILSERVER_SELF_HOSTED_AUTH.md  MONITORING_SETUP.md  REACT_QUERY_SETUP.md  SEARCH_CACHE.md  SEARCH_OPERATIONS.md  SMTP_OPERATIONS_RUNBOOK.md  SPAM_PREVENTION_RUNBOOK.md  SPRINT5_QA_GATE.md  SPRINT6_QA_GATE.md  SPRINT8_QA_GATE.md  SSL_TLS_SETUP.md
doc/planning/: 00_executive_summary.md  01_stakeholder_roles.md  02_requirements.md  03_user_journeys.md  04_domain_model.md  05_system_architecture.md  06_security_compliance.md  07_modules.md  08_backlog_roadmap.md  09_testing_quality.md  10_operations_observability.md  11_risks_decisions.md  12_sprint_2_issue_plan.md  README.md
doc/seed/: SA2_70476607.txt  seed.md
docker/: Dockerfile.nginx  generate-ssl.sh
docker/nginx/: default.conf  nginx.conf
frontend/: .env.example  .eslintignore  .eslintrc.json  .prettierignore  .prettierrc.json  README.md  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.setup.ts
frontend/src/: main.tsx
migrations/: README.md  env.py
migrations/versions/: 71e6668b4da7_add_nano_domain_models_for_upload_.py  (+8 more)
scripts/: docker-entrypoint.sh  init_db.py  reindex_search.py  seed_qa_demo_data.py
tests/: conftest.py
(+163 files in other folders)
